force-app/main/default/objects/Show_user__c/Show_user__c.object-meta.xml
<CustomObject>
    <label>Show User</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Show Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>