force-app/main/default/objects/Show_user__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aurangabad.</fullName>
            </value>
            <value>
                <fullName>Bhiwandi.</fullName>
            </value>
            <value>
                <fullName>Kolhapur.</fullName>
            </value>
            <value>
                <fullName>Malegaon.</fullName>
            </value>
            <value>
                <fullName>Mumbai.</fullName>
            </value>
            <value>
                <fullName>Nagpur.</fullName>
            </value>
            <value>
                <fullName>Nasik.</fullName>
            </value>
            <value>
                <fullName>Pune.</fullName>
            </value>
            <value>
                <fullName>Sangli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>