force-app/main/default/objects/Show_user__c/fields/Confirm_Password__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Password__c</fullName>
    <label>Confirm Password</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>