force-app/main/default/objects/Show_user__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>