force-app/main/default/objects/Show_user__c/fields/I_agree_with_terms_conditions__c.field-meta.xml
<CustomField>
    <fullName>I_agree_with_terms_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree with terms &amp; conditions</label>
    <type>Checkbox</type>
</CustomField>