force-app/main/default/objects/Show_user__c/fields/Is_Referred_by_Friend__c.field-meta.xml
<CustomField>
    <fullName>Is_Referred_by_Friend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Referred by Friend?</label>
    <type>Checkbox</type>
</CustomField>