force-app/main/default/objects/Show_user__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <businessOwnerUser>kaustubh.dongare17@gmail.com</businessOwnerUser>
    <label>Password</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>