force-app/main/default/objects/Show_user__c/fields/Secret_Answer__c.field-meta.xml
<CustomField>
    <fullName>Secret_Answer__c</fullName>
    <label>Secret Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>