force-app/main/default/objects/Show_user__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <label>Secret Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>