force-app/main/default/objects/Show_user__c/validationRules/DOB_above_18_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_above_18_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(TODAY() - DOB__c ) &lt;= 18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Age should be 18 and above</errorMessage>
</ValidationRule>