force-app/main/default/objects/Show_user__c/validationRules/Password_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Password_Validation</fullName>
    <active>true</active>
    <description>Validations for Password</description>
    <errorConditionFormula>NOT(REGEX( Password__c  , &quot;((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})&quot;))</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>Password should contain at least one numeric, 1 alpha numeric and 1 special characters.</errorMessage>
</ValidationRule>