force-app/main/default/objects/Show_user__c/validationRules/Validation_for_user_page.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_user_page</fullName>
    <active>true</active>
    <errorConditionFormula>First_Name__c  &lt;&gt; &quot;Name&quot;</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First name should not be equal to &quot;Name&quot; itself</errorMessage>
</ValidationRule>